Changes for Filter Effects specification
----------------------------------------

2012-08-16  Dirk Schulze  <dschulze@adobe.com>
- Added issue to apply filters to just borders or backgrounds instead of just the whole group.
- Added me as editor.

2012-08-12  Dirk Schulze  <dschulze@adobe.com>
- Fix references to Compositing spec.

2012-08-10  Dirk Schulze  <dschulze@adobe.com>

- Add sentence to property interpolation.

2012-08-07  Dirk Schulze  <dschulze@adobe.com>

- Editorial changes of 'enable-background'

2012-08-07  Dirk Schulze  <dschulze@adobe.com>

- Added issue about how infinit inputs apply to feGaussianBlur and feMorphology.
- Fixed typo on infinite inputs for feGaussianBlur (end of sentence was missing).

2012-08-06  Dirk Schulze  <dschulze@adobe.com>

- custom primitive operates on non-premultiplied colors
- general typo fixes

2012-08-01  Dirk Schulze  <dschulze@adobe.com>

- more clean-up and link fixes

2012-08-01  Dirk Schulze  <dschulze@adobe.com>

- general clean-up
- fix links

2012-08-01  Dirk Schulze  <dschulze@adobe.com>

- update mix function description. It is independent from a specific shader language now.
- Updated the default shaders for GLSL.

2012-07-27  Dirk Schulze  <dschulze@adobe.com>

- update element summary of filter element after more changes from Cameron on the preprocessor

2012-07-27  Dirk Schulze  <dschulze@adobe.com>

- use preprocessor to create element summary

2012-07-23  Erik Dahlström  <ed@opera.com>

- ACTION-3314: Specify that float values in the 'order' attribute of feConvolveMatrix 
  will truncate the values if they're not integers.

2012-07-20  Dirk Schulze  <dschulze@adobe.com>

- corrections to shader part after review

2012-06-27  Dirk Schulze  <dschulze@adobe.com>

- corrections on mix function

2012-06-27  Dirk Schulze  <dschulze@adobe.com>

- added description of mix function in the processing model
- some tweaks to SVG images

2012-06-27  Dirk Schulze  <dschulze@adobe.com>
