@@ -796,6 +796,11 @@
   in the sRGB color space.
 </p>
 
+<p class="issue">
+  At the moment it is unspecified how the 'color-interpolation-filters' property applies to short hand filters.
+  The FXTF discussed to apply it to the whole filter chain.
+</p>
+
 <h2 id="FilterFunction">Filter Functions</h2>
 
 <p>
@@ -4884,7 +4889,7 @@ class="element-name">'feCustom'</span></h2>
                     </tr>
                     <tr>
                         <td>&lt;array&gt;</td>
-                        <td>array(&lt;number&gt;+)</td>
+                        <td>array(&lt;number&gt;#)</td>
                     </tr>
                     <tr>
                         <td>&lt;mat&gt;</td>
