@@ -75,14 +75,14 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 16 August 2012</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 17 August 2012</h2>
 
    <dl>
     <dt>This version:
 
     <dd> <a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html</a>
-     <!--http://www.w3.org/TR/2012/WD-filter-effects-20120816/-->
+     <!--http://www.w3.org/TR/2012/WD-filter-effects-20120817/-->
 
     <dt>Latest version:
 
@@ -1337,6 +1337,12 @@
    effects operations occur in the linearRGB color space, whereas all other
    color interpolations occur by default in the sRGB color space.
 
+  <p class=issue> At the moment it is unspecified how the ‘<a
+   href="#color-interpolation-filters"><code
+   class=property>color-interpolation-filters</code></a>’ property applies
+   to short hand filters. The FXTF discussed to apply it to the whole filter
+   chain.
+
   <h2 id=FilterFunction><span class=secno>7. </span>Filter Functions</h2>
 
   <p> The value of the ‘<a href="#filter"><code
@@ -1946,17 +1952,17 @@
    class=property>filter</code>’</a> elements are never rendered directly;
    their only usage is as something that can be referenced using the ‘<a
    href="#filter"><code class=property>filter</code></a>’ property. The <a
-   class=property href="HASH(0x7f9dc9848328)">‘<code
+   class=property href="HASH(0x7fa648848328)">‘<code
    class=property>display</code>’</a> property does not apply to the <a
    class=element-name href="#FilterElement">‘<code
    class=property>filter</code>’</a> element; thus, <a class=element-name
    href="#FilterElement">‘<code class=property>filter</code>’</a>
    elements are not directly rendered even if the <a class=property
-   href="HASH(0x7f9dc9848328)">‘<code class=property>display</code>’</a>
+   href="HASH(0x7fa648848328)">‘<code class=property>display</code>’</a>
    property is set to a value other than <span class=prop-value>none</span>,
    and <a class=element-name href="#FilterElement">‘<code
    class=property>filter</code>’</a> elements are available for referencing
-   even when the <a class=property href="HASH(0x7f9dc9848328)">‘<code
+   even when the <a class=property href="HASH(0x7fa648848328)">‘<code
    class=property>display</code>’</a> property on the <a class=element-name
    href="#FilterElement">‘<code class=property>filter</code>’</a> element
    or any of its ancestors is set to <span class=prop-value>none</span>.
@@ -2522,29 +2528,29 @@
   <p id=filtersColorSpace>The color space in which a particular <a
    href="#TermFilterPrimitiveElement">filter primitive</a> performs its
    operations is determined by the value of property <a class=property
-   href="HASH(0x7f9dc984bbc0)">‘<code
+   href="HASH(0x7fa64884bbc0)">‘<code
    class=property>color-interpolation-filters</code>’</a> on the given <a
    href="#TermFilterPrimitiveElement">filter primitive</a>. A different
-   property, <a class=property href="HASH(0x7f9dc98484d8)">‘<code
+   property, <a class=property href="HASH(0x7fa6488484d8)">‘<code
    class=property>color-interpolation</code>’</a> determines the color
    space for other color operations. Because these two properties have
    different initial values (<a class=property
-   href="HASH(0x7f9dc984bbc0)">‘<code
+   href="HASH(0x7fa64884bbc0)">‘<code
    class=property>color-interpolation-filters</code>’</a> has an initial
    value of <span class=prop-value>linearRGB</span> whereas <a class=property
-   href="HASH(0x7f9dc98484d8)">‘<code
+   href="HASH(0x7fa6488484d8)">‘<code
    class=property>color-interpolation</code>’</a> has an initial value of
    ‘<code class=css>sRGB</code>’), in some cases to achieve certain
    results (e.g., when coordinating gradient interpolation with a filtering
    operation) it will be necessary to explicitly set <a class=property
-   href="HASH(0x7f9dc98484d8)">‘<code
+   href="HASH(0x7fa6488484d8)">‘<code
    class=property>color-interpolation</code>’</a> to ‘<code
    class=css>linearRGB</code>’ or ‘<a
    href="#color-interpolation-filters"><code
    class=property>color-interpolation-filters</code></a>’ to ‘<code
    class=css>sRGB</code>’ on particular elements. Note that the examples
    below do not explicitly set either <a class=property
-   href="HASH(0x7f9dc98484d8)">‘<code
+   href="HASH(0x7fa6488484d8)">‘<code
    class=property>color-interpolation</code>’</a> or ‘<a
    href="#color-interpolation-filters"><code
    class=property>color-interpolation-filters</code></a>’, so the initial
@@ -2804,7 +2810,7 @@
         stroked</i>.</p>
 
        <p> For svg this keyword represents the value of the <a class=property
-        href="HASH(0x7f9dc9847998)">‘<code
+        href="HASH(0x7fa648847998)">‘<code
         class=property>stroke</code>’</a> on the target element for the
         filter effect.</p>
 
@@ -5998,7 +6004,7 @@ A' = <a
        is recommended that high quality viewers make use of appropriate
        interpolation techniques, for example bilinear or bicubic. Depending
        on the speed of the available interpolents, this choice may be
-       affected by the <a class=property href="HASH(0x7f9dc9847dd0)">‘<code
+       affected by the <a class=property href="HASH(0x7fa648847dd0)">‘<code
        class=property>image-rendering</code>’</a> property setting. Note
        that implementations might choose approaches that minimize or
        eliminate resampling when not necessary to produce proper results,
@@ -6535,7 +6541,7 @@ Extended by two pixels using "duplicate":
        appropriate interpolation techniques, for example bilinear or
        bicubic.</span> Depending on the speed of the available interpolents,
        this choice may be affected by the <a class=property
-       href="HASH(0x7f9dc9847dd0)">‘<code
+       href="HASH(0x7fa648847dd0)">‘<code
        class=property>image-rendering</code>’</a> property setting. Note
        that implementations might choose approaches that minimize or
        eliminate resampling when not necessary to produce proper results,
@@ -6870,7 +6876,7 @@ Extended by two pixels using "duplicate":
        class=property>fePointLight</code>’</a> or <a class=element-name
        href="#feSpotLightElement">‘<code
        class=property>feSpotLight</code>’</a>. The light color is specified
-       by property <a class=property href="HASH(0x7f9dc9848100)">‘<code
+       by property <a class=property href="HASH(0x7fa648848100)">‘<code
        class=property>lighting-color</code>’</a>.</p>
 
       <h2 id=feDisplacementMapElement><span class=secno>19. </span>Filter
@@ -7150,10 +7156,10 @@ Extended by two pixels using "duplicate":
        for example bilinear or bicubic, rather than simply selecting the
        nearest source pixel. Depending on the speed of the available
        interpolents, this choice may be affected by the <a class=property
-       href="HASH(0x7f9dc9847dd0)">‘<code
+       href="HASH(0x7fa648847dd0)">‘<code
        class=property>image-rendering</code>’</a> property setting.</p>
 
-      <p> The <a class=property href="HASH(0x7f9dc984bbc0)">‘<code
+      <p> The <a class=property href="HASH(0x7fa64884bbc0)">‘<code
        class=property>color-interpolation-filters</code>’</a> property only
        applies to the <a class=attr-name
        href="#feDisplacementMapIn2Attribute">‘<code
@@ -9696,7 +9702,7 @@ Extended by two pixels using "duplicate":
        href="#feDistantLightElement">‘<code
        class=property>feDistantLight</code>’</a>. The light color is
        specified by property <a class=property
-       href="HASH(0x7f9dc9848100)">‘<code
+       href="HASH(0x7fa648848100)">‘<code
        class=property>lighting-color</code>’</a>.</p>
 
       <p><a href="#AnExample">The example</a> at the start of this chapter
@@ -10199,7 +10205,7 @@ Extended by two pixels using "duplicate":
 
       <p> The generated color and alpha values are in the color space
        determined by the <a class=property
-       href="HASH(0x7f9dc984bbc0)">‘<code
+       href="HASH(0x7fa64884bbc0)">‘<code
        class=property>color-interpolation-filters</code>’</a> property:</p>
 
       <pre
@@ -10871,9 +10877,9 @@ double turbulence(int nColorChannel, double *point, double <a
 
        <li>Do processing as if an <a class=element-name
         href="#feFloodElement">‘<code class=property>feFlood</code>’</a>
-        element with <a class=property href="HASH(0x7f9dc9848268)">‘<code
+        element with <a class=property href="HASH(0x7fa648848268)">‘<code
         class=property>flood-color</code>’</a> and <a class=property
-        href="HASH(0x7f9dc9848148)">‘<code
+        href="HASH(0x7fa648848148)">‘<code
         class=property>flood-opacity</code>’</a> as specified on the <a
         class=element-name href="#feDropShadowElement">‘<code
         class=property>feDropShadow</code>’</a> was applied:
@@ -11130,7 +11136,7 @@ double turbulence(int nColorChannel, double *point, double <a
            <tr>
             <td>&lt;array&gt;
 
-            <td>array(&lt;number&gt;+)
+            <td>array(&lt;number&gt;#)
 
            <tr>
             <td>&lt;mat&gt;
