@@ -1,6 +1,9 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2012-08-17  Dirk Schulze  <dschulze@adobe.com>
+- Corrected typos and added issue to 'color-interpolation-filters' property.
+
 2012-08-16  Dirk Schulze  <dschulze@adobe.com>
 - Added issue to apply filters to just borders or backgrounds instead of just the whole group.
 - Added me as editor.
